@@ -1,5 +1,4 @@
 /* $Id$ */
-#define _BSD_SOURCE 1
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
