@@ -1,4 +1,3 @@
-#define _BSD_SOURCE 1
 #ifdef HAVE_CONFIG_H 
 #include "config.h"
 #endif
